--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "antd": "^5.6.0",
     "axios": "^1.4.0",
     "formik": "^2.4.0",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.2",
     "yup": "^1.2.0"
   },
