--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.22.5",
     "antd": "^5.6.0",
     "axios": "^1.4.0",
     "formik": "^2.4.0",
     "framer-motion": "^10.12.16",
+    "numeral": "^2.0.6",
+    "rc-slider": "^10.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-intl": "^6.4.4",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.2",
-    "yup": "^1.2.0"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
