--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.9.0",
     "react-intl": "^6.4.4",
     "react-modal": "^3.16.1",
+    "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
