--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/runtime": "^7.22.5",
     "antd": "^5.6.0",
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "formik": "^2.4.0",
     "framer-motion": "^10.12.16",
     "numeral": "^2.0.6",
